fix faq gaps

--- a/src/scss/modules/_faq.scss
+++ b/src/scss/modules/_faq.scss
@@ -70,7 +70,7 @@
 			@media (max-width: 500px){
 				padding-top: 1.1em;
 				padding-bottom: 1.1em;
-				gap: 0.4em;
+				gap: .5em;
 				&:after {
 					align-self: flex-start;
 					margin: 0 0 0 auto;
